# SeamCarving

./: CMakeLists.txt  Images_av.cpp  Images_av.h  README.md  main.cpp
